# pkg-nxlog-ce

./: ChangeLog.txt  LICENSE  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.in  libtool  nxlog-ce_2.1.957.orig.tar.bz2.delta  nxlog-ce_2.1.957.orig.tar.bz2.id  nxlog-ce_2.2.1017.orig.tar.gz.delta  nxlog-ce_2.2.1017.orig.tar.gz.id  nxlog-ce_2.4.1054.orig.tar.gz.delta  nxlog-ce_2.4.1054.orig.tar.gz.id  nxlog-ce_2.5.1089.orig.tar.gz.delta  nxlog-ce_2.5.1089.orig.tar.gz.id  nxlog-ce_2.7.1191.orig.tar.gz.delta  nxlog-ce_2.7.1191.orig.tar.gz.id  version.sh
debian/: changelog  control  copyright  make_debs.sh  nxlog-ce.install  nxlog.init  postinst  postrm  rules
doc/: Makefile.in
doc/reference-manual/: Makefile.in
doc/reference-manual/config-examples/: Makefile.am  Makefile.in  cisco_acs.conf  config-example-apache_parse.xml  config-example-cisco_acs.conf.xml  config-example-cisco_acs.out.xml  config-example-cisco_acs.xml  config-example-cisco_pix_asa.xml  config-example-common.xml  config-example-detect_no_logs.xml  config-example-exec.xml  config-example-gelf.xml  config-example-im_dbi_mysql.xml  config-example-im_exec.xml  config-example-im_file.xml  config-example-im_internal.xml  config-example-im_kernel.xml  config-example-im_mark.xml  config-example-im_ssl.xml  config-example-im_tcp.xml  config-example-im_udp.xml  config-example-im_uds.xml  config-example-inputtype.xml  config-example-om_blocker.xml  config-example-om_dbi_mysql.xml  config-example-om_dbi_pgsql.xml  config-example-om_exec.xml  config-example-om_file.xml  config-example-om_file_rotate1.xml  config-example-om_http.xml  config-example-om_ssl.xml  config-example-om_tcp.xml  config-example-om_udp.xml  config-example-om_uds.xml  config-example-outputtype.xml  config-example-patterndb.xml.xml  config-example-pm_blocker.xml  config-example-pm_buffer.xml  config-example-pm_buffer_drop.xml  config-example-pm_filter.xml  (+37 more)
packaging/aix/: init  nxlog.spec
packaging/debian/: conffiles  control  control.Debian-wheezy  control.default  copyright  nxlog.init  postinst  rules
packaging/redhat/: init  make_rpm.sh  nxlog.spec  nxlog.spec.RHEL5  nxlog.spec.RHEL5.in  nxlog.spec.in
packaging/suse/: init  nxlog.spec.SLES11
packaging/windows/: README.txt  license.rtf  nxlog.conf  nxlog.wxs  nxlog.wxs.in  pkgmsi.sh
src/: Makefile.in
src/common/: Makefile.am  Makefile.in  alloc.c  config.h.in  config_cache.c  confparser.c  core-api.xml  date.c  date.h  error_debug.c  exception.c  expr-core-funcproc-cb.c  expr-core-funcproc.c  expr-core-funcproc.h  expr-grammar.c  expr-grammar.h  expr-grammar.y  expr-parser.c  expr-parser.h  expr-tokens.c  expr-tokens.l  expr.c  expr.h  logdata-serialize.c  logdata.c  module.c  module.h  ssl.c  statvar.c  str.c  str.h  strptime.c  types.h  value-serialize.c  value.c  value.h  writerfuncs.c
src/core/: Makefile.in  ctx.c  ctx.h  main-unix.c  main-win32.c  modules.c  nxlog.c  nxlog.h  router.c
src/modules/: Makefile.in
src/utils/: Makefile.in  stmnt-verifier.c  stresstest.c
test/: Makefile.in  module-tester.sh  tester.pl
test/common/: Makefile.in  (+4 more)
(+175 files in other folders)
